DevOCL/src/objects/CLQ_Program__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Report_Due_Date__c</fullName>
        <label>Annual Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_ACA_Accreditation_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACA Accreditation Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_ACA_Accredited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACA Accredited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_ACA_Verification_Date__c</fullName>
        <description>Auto-populates from Program Transaction</description>
        <label>ACA Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Accreditation_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accreditation Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Age_Group_Served__c</fullName>
        <inlineHelpText>Age groups of children who can attend program</inlineHelpText>
        <label>Age Group Served</label>
        <picklist>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toddler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School-age</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Any_Problems_with_Tanks__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Are you aware of any problems, such as leakage</inlineHelpText>
        <label>Any Problems with Tanks</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Capacity_Under_2_5__c</fullName>
        <label>Approved Capacity Under 2 1/2 Years</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Capacity_Under_2__c</fullName>
        <label>Approved Capacity Under 2</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Total_Capacity__c</fullName>
        <label>Approved Total Capacity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Are_you_Foster_Parent__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Are you Foster Parent?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Asbestos__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Do you have actual knowledge of the presence of any of the below identified materials on the property?</inlineHelpText>
        <label>Asbestos</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Assigned_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Licensor/specialist assigned to the program.</inlineHelpText>
        <label>Assigned Reviewer / Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Associated_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Attendance_Options__c</fullName>
        <inlineHelpText>What options do children have for attendance?</inlineHelpText>
        <label>Attendance Options</label>
        <picklist>
            <picklistValues>
                <fullName>Full Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekends</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_BIRN__c</fullName>
        <label>BIRN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Begin_Date__c</fullName>
        <inlineHelpText>Begin date of the program</inlineHelpText>
        <label>Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Calculated_Max_Capacity__c</fullName>
        <description>The sum of square footage for all indoor approved primary space rooms marked as serving children Over 2 ½ divided by 35 +  the sum of the total Number of Children Allowed for all indoor approved primary space rooms where “Will children in this room be over or under 2 1/2?” is marked Under or Both</description>
        <label>Calculated Max Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Certification_Status__c</fullName>
        <label>Certification Status</label>
        <picklist>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Certified</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Closure_Date__c</fullName>
        <label>Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Continuous_License_Status__c</fullName>
        <description>This field will tell the status of any continuous license transaction that is attached to the program.  It can contain either blank, &apos;initiated&apos; or &apos;approved&apos;, &apos;approved&apos; implies initiated.</description>
        <label>Continuous License Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>CLQ_County__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Create_Day_Camp_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Day Camp Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Current_Capacity__c</fullName>
        <label>Current Capacity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Current_Under_2_5_Capacity__c</fullName>
        <label>Current Under 2.5 Capacity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Current_Under_2_Capacity__c</fullName>
        <label>Current Under 2 Capacity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Day_Camp_Name__c</fullName>
        <inlineHelpText>Name of Day Camp as it appears on ACA Accreditation</inlineHelpText>
        <label>Day Camp Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Describe_Other_Toxic_Substances__c</fullName>
        <label>Describe Other Toxic Substances</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Enforcement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if program is currently in enforcement status</inlineHelpText>
        <label>Enforcement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Estimated_Enrollment__c</fullName>
        <label>Estimated Enrollment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Program object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_First_Inspection_Due__c</fullName>
        <inlineHelpText>First/Next Provisional/Annual Inspection Due Date</inlineHelpText>
        <label>Next Inspection Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Food_Service__c</fullName>
        <inlineHelpText>Which of the following has been obtained?</inlineHelpText>
        <label>Food Service</label>
        <picklist>
            <picklistValues>
                <fullName>Food Service License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service License Exemption</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Foster_Children__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Are you currently caring for foster children?</inlineHelpText>
        <label>Foster Children</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Full_Day_Option_Offered__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Full Day Option Offered</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Full_Day_Option__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Full-day Option</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Funding__c</fullName>
        <label>Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Is_Day_Camp_ACA_Certified__c</fullName>
        <label>Is Day Camp ACA Certified?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Is_the_Camp_Accredited_by_the_ACA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Camp Accredited by the American Camping Association (ASA)?</description>
        <inlineHelpText>Is the Camp Accredited by the American Camping Association (ASA)?</inlineHelpText>
        <label>Is the Camp Accredited by the ACA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Last_Day_of_Operation__c</fullName>
        <description>This is the date of last day of operation if program is permanently closed.</description>
        <inlineHelpText>This is the date of last day of operation if program is permanently closed.</inlineHelpText>
        <label>Last Day of Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Last_Registration_Date__c</fullName>
        <label>Last Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Lead_Based_Paint__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Do you have actual knowledge of the presence of any of the below identified materials on the property?</inlineHelpText>
        <label>Lead Based Paint</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Level_of_Radon_Gas__c</fullName>
        <inlineHelpText>If Radon gas is presnt, indicate the level of gas in Pci/L. Typical radon gas measurements will be captured in a format similar to dollars and cents (ex. 0.04, 1.23, 0.81, etc.).</inlineHelpText>
        <label>Level of Radon Gas</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Issue_Date__c</fullName>
        <inlineHelpText>Date of issuance of license.</inlineHelpText>
        <label>License Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Number__c</fullName>
        <inlineHelpText>The current license number</inlineHelpText>
        <label>License Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Registration_Status__c</fullName>
        <label>License Status</label>
        <picklist>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed/Certified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Type__c</fullName>
        <inlineHelpText>Type of license issued</inlineHelpText>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Provisional</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Continuous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Licensing_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licensing Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_MailingStateG__c</fullName>
        <globalPicklist>CLQ_All_States</globalPicklist>
        <label>Mailing State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_Address_2__c</fullName>
        <label>Mailing Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_State__c</fullName>
        <globalPicklist>CLQ_All_States</globalPicklist>
        <label>Mailing State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_ZIP_Code__c</fullName>
        <label>Mailing ZIP Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Materials_stored_in_Tanks__c</fullName>
        <inlineHelpText>List all the materials that are/were stored in the tanks</inlineHelpText>
        <label>Materials stored in Tanks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Max_Capacity_Under_2_5_Years__c</fullName>
        <description>The sum of the total number of children allowed for all indoor approved primary space rooms where “Will children in this room be over or under 2 1/2?” is marked Under or Both. 

Value is determined based on room dimensions for rooms marked as serving children under 2 1/2 on the Classroom overlay(s) on the Room Information tab screen. 

System displays whole number only, rounded down</description>
        <label>Max Capacity Under 2 1/2 Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Max_Capacity_Under_2_Years__c</fullName>
        <label>Max Capacity Under 2 Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Max_Under_2_5_Capacity__c</fullName>
        <description>The sum of the total number of children allowed for all indoor approved primary space rooms where “Will children in this room be over or under 2 1/2?” is marked Under or Both. 

Value is determined based on room dimensions for rooms marked as serving children under 2 1/2 on the Classroom overlay(s) on the Room Information tab screen. 

System displays whole number only, rounded down</description>
        <label>Max Under 2.5 Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_No_Expiration_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Number_of_Residents__c</fullName>
        <inlineHelpText>How many people, NOT including yourself, currently live in your home? * (This number should include: children, foster children, relatives, and boarders).</inlineHelpText>
        <label>Number of Residents</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Number_of_Rooms__c</fullName>
        <label>Number of Rooms</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_OCLQS_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCLQS Configuration</label>
        <referenceTo>CLQ_OCLQS_Configuration__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_ODE_Affiliation_Number__c</fullName>
        <label>ODE Affiliation Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_ODE_Site_Number__c</fullName>
        <label>ODE Site Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_OOS_Program_Number__c</fullName>
        <inlineHelpText>Other Agency Program Number</inlineHelpText>
        <label>OOS Program Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_OOS_Program_Type__c</fullName>
        <label>OOS Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Home Aide</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Open_Date__c</fullName>
        <description>Only Future Date</description>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Other_Toxic_Substances__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Other Toxic Substances</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Part_day_Option__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Part-day Option</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Phone__c</fullName>
        <label>Program Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Email__c</fullName>
        <label>Program Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_ID__c</fullName>
        <displayFormat>{YY}{0000000}</displayFormat>
        <label>Program ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Number__c</fullName>
        <formula>IF(or(contains(RecordType.Name,&apos;FCC&apos;),RecordType.Name = &apos;Child Care Center&apos;,RecordType.Name = &apos;Out of State Registration&apos;,RecordType.Name = &apos;In-Home Aide&apos;,RecordType.Name = &apos;Day Camp&apos; ),&apos;2&apos;&amp;CLQ_Program_ID__c ,
 IF(or(RecordType.Name=&apos;Pre School&apos;,RecordType.Name=&apos;School Age Child Care&apos;),&apos;1&apos;&amp;CLQ_Program_ID__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Rating__c</fullName>
        <label>Program Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Status_Text__c</fullName>
        <formula>TEXT( CLQ_Program_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Status__c</fullName>
        <label>Program Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Proposed_Open_Date__c</fullName>
        <description>Only Future Date</description>
        <label>Proposed Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Provisional_License_Expiration_Date__c</fullName>
        <label>Provisional License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Radon_Gas__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Radon Gas</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Registered</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Same_as_Program_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Program Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Same_as_Site_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Site Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Specialized_Foster_Home__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Are you a specialized or treatment foster home?</inlineHelpText>
        <label>Specialized Foster Home</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Storage_of_Hazardous_Toxic_Material__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>Underground storage of hazardous or toxic materials? * (currently or previously existing)</inlineHelpText>
        <label>Storage of Hazardous/Toxic Material</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Tanks_currently_in_use__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Tanks currently in use</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_Enrollment_Under_2_5_years__c</fullName>
        <label>Total Enrollment Under 2 1/2 years</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_Enrollment_Under_2_years__c</fullName>
        <label>Total Enrollment Under 2 years</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_Enrollment__c</fullName>
        <label>Total Enrollment</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Total_Staff__c</fullName>
        <inlineHelpText>Total Number of Staff at this Program</inlineHelpText>
        <label>Total Staff</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Registration_Date__c</fullName>
        <label>First Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <inlineHelpText>Which of the following has been obtained?</inlineHelpText>
        <label>Food Service Obtained</label>
        <picklist>
            <picklistValues>
                <fullName>Food Service License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service License Exemption</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Day_Camp_from_ACA__c</fullName>
        <inlineHelpText>Name of Day Camp as it appears on ACA Accreditation Certificate</inlineHelpText>
        <label>Name of Day Camp from ACA Certificate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonAdmn_Program_Rating__c</fullName>
        <formula>IF(AND(NOT( ISPICKVAL(Program_Rating__c,&apos;&apos;)),(Rating_Effective_Date__c&lt;= TODAY()),(Rating_Expiration_Date__c &gt;= TODAY())),TEXT(Program_Rating__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Rating__c</fullName>
        <label>Program Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Effective_Date__c</fullName>
        <label>Rating Effective Date</label>
        <type>Date</type>
    </fields>
</CustomObject>